<resources>
    <string name="app_name">CatApp</string>
    <string name="description">Distinguished by truly unique ears that curl back in a graceful arc, offering an alert, perky, happily surprised expression, they cause people to break out into a big smile when viewing their first Curl. Curls are very people-oriented, faithful, affectionate soulmates, adjusting remarkably fast to other pets, children, and new situations.</string>
    <string name="description_title">Description</string>
    <string name="name">American Curl</string>
    <string name="temperament">Affectionate, Curious, Playful, Social</string>
    <string name="favourite_item">American Curl</string>
    <string name="country">Australia</string>
    <string name="origin">Origin</string>
    <string name="catInfo">Further Cat Information</string>
    <string name="search">Search</string>
    <string name="search_hint">Search a particular breed here!</string>
    <string name="ClickFave">Click below to add this cat to your favourites!</string>
</resources>
