<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hw3kk.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/_constraintLayout_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#4DFFFFFF"
        android:padding="16dp">

        <TextView
            android:id="@+id/name_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/name"
            android:textColor="#009688"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/temperament_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:text="@string/temperament"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/description_detail"
            app:layout_constraintTop_toBottomOf="@+id/descriptionTitle_detail"
            tools:layout_editor_absoluteX="-3dp" />

        <ImageButton
            android:id="@+id/favoriteButton_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="36dp"
            android:layout_marginRight="36dp"
            android:background="#00ffffff"
            android:src="@android:drawable/ic_input_add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.55"
            app:layout_constraintStart_toStartOf="@+id/image_detail"
            app:layout_constraintTop_toBottomOf="@+id/image_detail" />

        <ImageView
            android:id="@+id/image_detail"
            android:layout_width="match_parent"
            android:layout_height="200dp"

            android:src="@mipmap/ic_launcher"
            app:layout_constraintTop_toBottomOf="@+id/name_detail"
            tools:layout_editor_absoluteX="14dp" />

        <TextView
            android:id="@+id/descriptionTitle_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/description_title"
            android:textColor="#009688"
            android:textSize="23sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_detail" />

        <TextView
            android:id="@+id/description_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:text="@string/description"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/image_detail"
            app:layout_constraintTop_toBottomOf="@id/descriptionTitle_detail" />

        <TextView
            android:id="@+id/stats_detail_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="76dp"
            android:layout_marginLeft="76dp"
            android:layout_marginTop="20dp"
            android:text="@string/catInfo"
            android:textColor="#009688"
            android:textSize="23sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/image_detail"
            app:layout_constraintTop_toBottomOf="@id/description_detail" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/stats_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@id/stats_detail_title" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="212dp"
            android:text="@string/ClickFave"
            app:layout_constraintEnd_toEndOf="@+id/favoriteButton_detail"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="@+id/favoriteButton_detail"
            app:layout_constraintTop_toTopOf="@+id/image_detail" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>